# ws_case_study

./: .gitignore  Cargo.toml  README.md  cfn.yaml
src/: config.rs  error.rs  main.rs
src/handlers/: connect.rs  disconnect.rs  mod.rs  sendmessage.rs
src/schema/: connection.rs  message.rs
