[package]
name = "ws_case_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55"
aws-sdk-apigatewaymanagement = "0.28"
aws-sdk-dynamodb = "0.28"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
lambda_http = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_28"] }
serde_json = "1.0"
thiserror = "1.0.40"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.0", features = ["serde"] }
